fix(frontend): update spacings

--- a/web/src/app/core/layout/main-layout/main-layout.component.scss
+++ b/web/src/app/core/layout/main-layout/main-layout.component.scss
@@ -142,7 +142,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    padding: 24px;
+    padding: 15px 25px 0 25px;
     overflow: scroll;
 }
 
